Added in pd-grid-3

--- a/bootstrap_theme/pendigital/factory_grid.scss
+++ b/bootstrap_theme/pendigital/factory_grid.scss
@@ -354,6 +354,216 @@
     }
 }
 
+// end pd-grid-2
+// start pd-grid-3
+.pd-grid-3 {
+    .pd-intro-heading-sm {
+        font-size: 0.9rem;
+        font-weight: 700;
+        color: #c5247f;
+        margin-bottom: 0px;
+    }
+
+    .pd-headline {
+        font-size: 2.4rem;
+        font-weight: 700;
+        color: #2a2a2a;
+    }
+
+    .pd-subHeadline {
+        color: #2a2a2a;
+        line-height: 1.5;
+    }
+
+    .pd-icon {
+        fill: #2a2a2a;
+        margin-right: 6px;
+    }
+
+    .pd-grid-3-outer {
+        @media screen and (max-width: 991px) {
+            display: block;
+        }
+
+        @media (min-width: 768px) and (max-width: 991px) {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            gap: 20px;
+        }
+
+        @media (min-width: 992px) {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            grid-template-rows: auto auto auto;
+            gap: 20px;
+        }
+
+        .pd-grid-card-sm {
+
+            @media screen and (max-width: 767px) {
+                margin-bottom: 20px;
+            }
+
+            @media (min-width: 768px) and (max-width: 991px) {
+                margin-bottom: 0px;
+            }
+
+            @media (min-width: 992px) {
+                margin-bottom: 0px;
+            }
+
+            .pd-grid-card-sm-outer {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: flex-start;
+                border: 1px solid #e7e7e7;
+                background: $white;
+                border-radius: 10px;
+                padding: 20px;
+                height: 100%;
+                box-shadow: 6px 7px 14px rgba(0, 0, 0, 0.1);
+                .pd-icon-outer {
+                    border: 3px solid #c5247f;
+                    width: 60px;
+                    height: 60px;
+                    border-radius: 50em;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;                    
+
+                    .pd-icon {
+                        fill: #c5247f;
+                        height: 30px;
+                        width: 30px;
+                        margin-right: 0px;
+                    }
+                }
+
+                h3 {
+                    font-size: 1.4rem;
+                    font-weight: 700;
+                    color: #c5247f;
+                }
+
+                p {
+                    font-size: 0.9rem;
+                }
+                footer {
+                    margin-top: auto;
+                }
+
+                a {
+                    text-decoration: none;
+                    font-weight: 700;
+                    color: #c5247f;
+                     &:before {
+                        content: ">";
+                        margin-right: 4px;
+                     }
+                }
+            }
+        }
+
+        .pd-grid-card-lg {
+            grid-column: 1 / span 2;
+            grid-row: 1 / span 2;
+            position: relative;
+            border-radius: 10px;
+            box-shadow: 6px 7px 14px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+
+            @media screen and (max-width: 575px) {
+                min-height: 280px;
+                margin-bottom: 20px;
+            }
+
+            @media (min-width: 576px) and (max-width: 767px) {
+                margin-bottom: 20px;
+                min-height: 350px;
+            }
+
+            @media (min-width: 768px) and (max-width: 991px) {
+                margin-bottom: 0px;
+                min-height: 350px;
+            }
+
+            @media (min-width: 992px) {
+                margin-bottom: 0px;
+            }
+
+            img {
+                position: absolute;
+                left: 0;
+                top: 0;
+                height: 100%;
+                width: 100%;
+                object-fit: cover;
+            }
+            .pd-grid-3-card-overlay {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;
+                background: linear-gradient(rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.15) 10%, rgba(0, 0, 0, 0.15) 90%, rgba(0, 0, 0, 0.5) 100%);
+
+            }
+
+            a {
+                display: inline-block;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                transform: translate(-50%, -50%);
+                z-index: 2;
+
+                .pd-icon {
+                    fill: white;
+                    width: 90px;
+                    height: 90px;
+                }
+            }
+        
+
+        }
+    }
+
+    .pd-btn {
+        border: 2px solid #c5247f;
+        background: transparent;
+        transition: background 0.3s;
+        border-radius: 50em;
+        padding: 16px 30px;
+        margin-right: 20px;
+        margin-bottom: 30px;
+        text-decoration: none;
+        color: #c5247f;
+        display: inline-block;
+        font-weight: 700;
+
+        .pd-icon {
+            width: 40px;
+            height: 40px;
+            margin-right: 6px;
+            fill: #c5247f;
+
+            
+        }
+
+        &:hover {
+            background: #c5247f;
+            color: $white;
+
+            .pd-icon {
+                fill: $white;
+            }
+        }
+    }
+}
+
+
 
 
 
