Added sample gallery images

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -89,5 +89,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_tabs.scss";
 @import "pendigital/factory_modals.scss";
 @import "pendigital/factory_search.scss";
+@import "pendigital/factory_galleries.scss";
 
 /* Custom CSS rules come here */
