--- a/bootstrap_theme/pendigital/factory_galleries.scss
+++ b/bootstrap_theme/pendigital/factory_galleries.scss
@@ -34,6 +34,56 @@
     }
 
     .pd-gallery-1-card {
-        
+        position: relative;
+
+        .pd-gallery-1-img-outer {
+            position: relative;
+            min-height: 200px;
+            overflow: hidden;
+            z-index: 1;
+
+            img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: center center;
+            }
+
+            figcaption {
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: auto;
+                background: rgba(255,255,255,0.6);
+                padding: 6px;
+                font-weight: 700;
+                font-size: 0.8rem;
+
+            }
+        }
+
+        .pd-gallery-1-btn {
+            position: absolute;
+            display: inline-block;
+            border: 2px solid white;
+            width: 60px;
+            height: 60px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            border-radius: 50em;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 2;
+            .pd-icon {
+                width: 40px;
+                height: 40px;
+                fill: white;
+            }
+        }
     }
 }
