--- a/bootstrap_theme/pendigital/factory_galleries.scss
+++ b/bootstrap_theme/pendigital/factory_galleries.scss
@@ -1,6 +1,6 @@
 .pd-gallery-1 {
 
-    background: linear-gradient(rgba(42, 42, 42, 1) 0%, rgba(42, 42, 42, 0.85) 40%, rgba(42, 42, 42, 0.85) 60%, rgba(42, 42, 42, 0.9) 100%);
+    background: linear-gradient(rgba(42, 42, 42, 1) 0%, rgba(42, 42, 42, 0.95) 40%, rgba(42, 42, 42, 0.95) 60%, rgba(42, 42, 42, 0.9) 100%);
     color: $white;
     position: relative;
 
@@ -38,9 +38,10 @@
 
         .pd-gallery-1-img-outer {
             position: relative;
-            min-height: 200px;
+            min-height: 300px;
             overflow: hidden;
             z-index: 1;
+            border-radius: 10px;
 
             img {
                 position: absolute;
@@ -57,7 +58,7 @@
                 width: 100%;
                 height: auto;
                 background: rgba(255,255,255,0.6);
-                padding: 6px;
+                padding: 6px 10px;
                 font-weight: 700;
                 font-size: 0.8rem;
 
@@ -80,9 +81,87 @@
             transform: translate(-50%, -50%);
             z-index: 2;
             .pd-icon {
-                width: 40px;
-                height: 40px;
+                width: 30px;
+                height: 30px;
                 fill: white;
+            }
+        }
+    }
+
+    .glide__bullets {
+        text-align: center;
+
+        .glide__bullet {
+            width: 12px;
+            height: 12px;
+            padding: 0;
+            margin-top: 20px;
+            margin-right: 6px;
+            border-radius: 50%;
+            border: 2px solid darken($white, 10%);
+            background: $white;
+            transition: transform 0.4s;
+
+            &:focus {
+                outline: 2px dotted $white;
+                outline-offset: 2px;
+            }
+        }
+
+
+
+        .glide__bullet.glide__bullet--active {
+            transform: scale(1.4);
+
+            // box-shadow: 2px 2px 6px 3px rgba(0,0,0,0.4);
+        }
+    }
+
+    .pd-gallery-1-arrowWrapper {
+        border: none;
+        background: none;
+        position: absolute;
+        top: 135px;
+        // transform: translateY(-50%);
+
+        &:focus {
+            outline: 2px dotted $white;
+            outline-offset: 2px;
+        }
+    }
+
+    .pd-gallery-1-arrowWrapper.glide__arrow--right {
+        right: 0;
+    }
+
+    .pd-btn {
+        border: 2px solid #c5247f;
+        background: transparent;
+        transition: background 0.3s;
+        border-radius: 50em;
+        padding: 16px 30px;
+        margin-right: 20px;
+        margin-bottom: 30px;
+        text-decoration: none;
+        color: white;
+        display: inline-block;
+        font-weight: 700;
+
+        .pd-icon {
+            width: 40px;
+            height: 40px;
+            margin-right: 6px;
+            fill: white;
+
+            
+        }
+
+        &:hover {
+            background: #c5247f;
+            color: $white;
+
+            .pd-icon {
+                fill: $white;
             }
         }
     }
