--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -2139,3 +2139,147 @@
         }
     }
 }
+
+// end pd-cards-16
+// start pd-cards-17
+.pd-cards-17 {
+    position: relative;
+
+    .pd-intro-heading-sm {
+        font-size: 0.9rem;
+        font-weight: 700;
+        color: $white;
+        margin-bottom: 0px;
+    }
+
+    .pd-headline {
+        font-size: 2.4rem;
+        font-weight: 700;
+        color: $white;
+    }
+
+    .pd-subHeadline {
+        color: $white;
+        line-height: 1.5;
+    }
+
+    .pd-icon {
+        fill: $white;
+        margin-right: 6px;
+    }
+
+    .pd-brand-side {
+        position: absolute;
+        right: 20px;
+        top: 20px;
+        z-index: 1;
+    }
+
+    .pd-cards-17-background-img-outer {
+        height: 100%;
+        min-height: 450px;
+        width: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            object-position: center center;
+            transform: scaleX(-1);
+        }
+    }
+
+    .pd-cards-17-img-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(rgba(42, 42, 42, 0.6) 0%, rgba(42, 42, 42, 0.4) 40%, rgba(42, 42, 42, 0.4) 60%, rgba(42, 42, 42, 0.6) 100%);
+    }
+
+    .pd-cards-17-content-outer {
+        position: relative;
+        z-index: 2;
+    }
+
+    .pd-cards-17-card-outer {
+        position: relative;
+        background: rgba(42,42,42,1);
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        flex-grow: 1;
+        box-shadow: 6px 7px 14px rgba(0, 0, 0, 0.1);
+
+        .pd-cards-17-card-img-outer {
+            position: relative;
+            min-height: 200px;
+            width: 100%;
+            overflow: hidden;
+            border-radius: 10px 10px 0px 0px;
+
+
+            img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                object-fit: cover;
+                object-position: center center;
+            }
+        }
+
+        .pd-cards-17-card-body-outer {
+            flex-grow: 1;
+            padding: 20px;
+            color: white;
+            
+            header {
+                h3 {
+                    font-size: 1.4rem;
+                    font-weight: 700;
+                }
+                flex-grow: 1;
+            }
+
+            .pd-cards-17-card-text-outer {
+                flex-grow: 1;
+                p {
+                    font-size: 0.9rem;
+                }
+            }
+
+            footer {
+                margin-top: auto;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+
+                a {
+                    text-decoration: none;
+                    color: white;
+                    margin-bottom: 10px;
+                    font-weight: 700;
+                    font-size: 0.9rem;
+
+                    &:before {
+                        content: ">";
+                        margin-right: 4px;
+                    }
+                }
+            }
+        }
+    }
+}
