--- a/bootstrap_theme/pendigital/factory_cards.scss
+++ b/bootstrap_theme/pendigital/factory_cards.scss
@@ -2184,16 +2184,46 @@
         left: 0;
         z-index: 1;
 
-        img {
-            position: absolute;
+        figure {
             width: 100%;
             height: 100%;
-            top: 0;
-            left: 0;
-            object-fit: cover;
-            object-position: center center;
-            transform: scaleX(-1);
+            img {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                object-fit: cover;
+                object-position: center center;
+                // transform: scaleX(-1);
+            }
+
+            figcaption {
+                position: absolute;
+                z-index: 2;
+                bottom: 0;
+                font-weight: 400;
+                font-size: 0.8rem;
+                color: $white;
+                padding: 10px;
+
+                em {
+                    font-weight: 700;
+                    font-style: normal;
+                }
+
+                @media screen and (max-width: 991px) {
+                    left: 50%;
+                    transform: translateX(-50%);
+                }
+                
+                @media (min-width: 992px) {
+                    left: 0;
+                    
+                }
+            }
         }
+
     }
 
     .pd-cards-17-img-overlay {
@@ -2244,33 +2274,37 @@
             flex-grow: 1;
             padding: 20px;
             color: white;
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
             
             header {
                 h3 {
                     font-size: 1.4rem;
                     font-weight: 700;
                 }
-                flex-grow: 1;
             }
 
             .pd-cards-17-card-text-outer {
-                flex-grow: 1;
                 p {
                     font-size: 0.9rem;
                 }
             }
 
             footer {
-                margin-top: auto;
                 display: flex;
                 flex-direction: column;
                 justify-content: flex-start;
                 align-items: flex-start;
+                // flex-grow: 1;
+                margin-top: auto;
 
                 a {
                     text-decoration: none;
                     color: white;
-                    margin-bottom: 10px;
+                    margin-bottom: 14px;
                     font-weight: 700;
                     font-size: 0.9rem;
 
@@ -2279,7 +2313,36 @@
                         margin-right: 4px;
                     }
                 }
+
+
             }
         }
+    }
+
+    .pd-cards-17-grid {
+        background: rgba(255,255,255,0.8);
+        border-radius: 10px;
+        padding: 20px;
+        @media screen and (max-width: 991px) {
+            display: block;
+        }
+        @media (min-width: 992px) {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr 1fr;
+            grid-template-rows: auto;
+        }
+
+        .pd-cards-17-grid-card {
+            text-align: center;
+
+            a {
+                display: inline-block;
+                img {
+                    width: 200px;
+                    height: auto;
+                }
+            }
+            }
+ 
     }
 }
