--- a/bootstrap_theme/pendigital/factory_grid.scss
+++ b/bootstrap_theme/pendigital/factory_grid.scss
@@ -562,6 +562,22 @@
         }
     }
 }
+// end pd-grid-3
+
+// start pd-grid-4
+.pd-grid-4 {
+
+    .pd-grid-4-outer {
+        @media screen and (max-width: 991px) {
+
+        }
+
+        @media (min-width: 992px) {
+            
+        }
+    }
+
+}
 
 
 
