Added in pd-slider-1

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -90,5 +90,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_modals.scss";
 @import "pendigital/factory_search.scss";
 @import "pendigital/factory_galleries.scss";
+@import "pendigital/factory_sliders.scss";
 
 /* Custom CSS rules come here */
