--- a/bootstrap_theme/pendigital/factory_heroes.scss
+++ b/bootstrap_theme/pendigital/factory_heroes.scss
@@ -1865,4 +1865,411 @@
 
 // end pd-hero-16
 
+// start pd-hero-17
+.pd-hero-17 {
+    min-height: 600px;
+    max-height: 1300px;
+    position: relative;
 
+    @media screen and (max-width: 1199px) {
+        height: 100vh;
+        height: calc(var(--vh, 1vh) * 100);
+
+        // top: 0; // amended
+    }
+
+    @media (min-width: 1200px) {
+        // height: calc(100vh - $pd-header-height-desktop);
+        // height: calc(var(--vh, 1vh) * 100 - $pd-header-height-desktop);
+        height: 100vh;
+
+        // position: relative;
+        // top: $pd-header-height-desktop; // amended
+        // margin-bottom: $pd-header-height-desktop; //amended
+    }
+
+    .pd-hero-17-img-outer {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+
+        .pd-hero-17-img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            object-position: center center;
+            transition: opacity .3s;
+            opacity: 0;
+            transform: scaleX(-1);
+
+            // remove
+        }
+
+        .pd-hero-17-img.pd-hero-17-image-loaded {
+            opacity: 1;
+        }
+    }
+
+    .container-xxl {
+        position: relative;
+        height: 100%;
+    }
+
+    .pd-hero-17-content-outer-outer {
+        min-height: 600px;
+        max-height: 1300px;
+        position: relative;
+
+        @media screen and (max-width: 1199px) {
+            height: 100vh;
+            height: calc(var(--vh, 1vh) * 100);
+        }
+
+        @media (min-width: 1200px) {
+            height: 100vh;
+        }
+    }
+
+    .pd-hero-17-content-outer {
+        position: absolute;
+
+        @media screen and (max-width: 991px) {
+            left: 50%;
+            transform: translateX(-50%);
+            width: 98%;
+            bottom: 20px;
+        }
+
+        @media (min-width: 992px) {
+            left: 0px;
+            width: 60%;
+            max-width: 750px;
+            bottom: 40px;
+        }
+
+        .pd-hero-17-notification-outer {
+            background: #218380;
+            color: white;
+            box-shadow: 10px 10px 12px rgba(0,0,0,0.1);
+            display: flex;
+
+            // border: 1px solid color('background-light-200');
+            p {
+                margin-bottom: 0px;
+            }
+
+            @media screen and (max-width: 991px) {
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                padding: 10px 30px;
+            }
+
+            @media (min-width: 992px) {
+                padding: 30px;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 10px;
+                border-radius: 10px;
+            }
+
+            .pd-hero-17-mobile-outer {
+
+                p {
+                    margin-bottom: 0px;
+                    font-weight: 300;
+
+                    strong, em {
+                        font-style: normal;
+                        font-weight: 800;
+                    }
+                }
+
+                a {
+                    color: white;
+                }
+
+            }
+
+            .pd-hero-17-notification-header-body-outer {
+                display: flex;
+
+                @media screen and (max-width: 992px) {
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                }
+
+                @media (min-width: 992px) {
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                }
+            }
+
+            .pd-hero-17-notification-header {
+                font-size: 1.4rem;
+                font-weight: 800;
+                flex: 0 1 auto;
+                max-width: 170px;
+            }
+
+            .pd-hero-17-notification-body {
+                flex: 1 0 60%;
+
+                @media screen and (max-width: 991px) {
+                    border-left: none;
+                }
+
+                @media (min-width: 992px) {
+                    border-left: 2px solid white;
+                }
+
+                p {
+                    font-weight: 300;
+                }
+
+                strong,
+                em {
+                    font-style: normal;
+                    font-weight: 800;
+                }
+
+                a {
+                    color: white;
+                }
+            }
+
+            .pd-hero-17-notification-footer {
+                flex: 0 0 auto;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+
+                @media screen and (max-width: 991px) {
+                    justify-content: flex-start;
+                }
+
+                @media (min-width: 992px) {
+                    justify-content: flex-end;
+                }
+            }
+
+            .pd-btn {
+                text-decoration: none;
+                color: white;
+                padding: 12px 20px;
+                border-radius: 50em;
+                border: 2px solid white;
+                white-space: nowrap;
+                margin-right: 0px;
+                margin-bottom: 0px;
+
+                img {
+                    margin-right: 4px;
+                    width: 24px;
+                    height: 24px;
+                }
+            }
+        }
+
+        .pd-hero-17-content-inner {
+            background: rgba(242, 247, 242, 0.8);
+            border-top: 1px solid #D8d8d7;
+            border-right: 1px solid #D8d8d7;
+            border-left: 1px solid #D8d8d7;
+            box-shadow: 10px 10px 12px rgba(0,0,0,0.1);
+
+            @media screen and (max-width: 991px) {
+                padding: 30px 30px 30px 30px;
+            }
+
+            @media (min-width: 992px) {
+                padding: 40px 40px 40px 40px;
+            }
+        }
+    }
+
+    .pd-intro-heading-sm {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 10px;
+
+        h1 {
+            font-weight: 400;
+            color: #161B33;
+            font-size: 1rem;
+
+            // letter-spacing: 0.07em;
+            margin-bottom: 0px;
+        }
+
+        span {
+            img {
+                margin-right: 3px;
+                margin-top: -3px;
+            }
+        }
+    }
+
+    .pd-headline {
+        font-weight: 800;
+        color: #161B33;
+        line-height: 1.3;
+
+        @media screen and (max-width: 991px) {
+            font-size: 1.8rem;
+            margin-botom: 20px;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 3rem;
+            margin-bottom: 10px;
+        }
+    }
+
+    .pd-subHeadline {
+        line-height: 1.5;
+        font-weight: 300;
+        color: #161B33;
+
+        strong,
+        em {
+            font-weight: 800;
+        }
+
+        @media screen and (max-width: 991px) {
+            font-size: 0.9rem;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 1rem;
+        }
+    }
+
+    footer {
+        display: flex;
+
+        @media screen and (max-width: 991px) {
+            flex-direction: column;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        @media (min-width: 992px) {
+        }
+    }
+
+    .pd-btn {
+        text-decoration: none;
+        color: #161B33;
+        margin-right: 20px;
+        padding: 12px 30px;
+        border-radius: 50em;
+        border: 2px solid #DE541E;
+
+        @media screen and (max-width: 991px) {
+            margin-bottom: 16px;
+        }
+
+        img {
+            margin-right: 4px;
+            width: 24px;
+            height: 24px;
+        }
+    }
+
+    .pd-address-phone-card-outer {
+        position: relative;
+        background-color: #161B33;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        margin-bottom: 0px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        box-shadow: 10px 10px 12px rgba(0,0,0,0.1);
+
+        @media screen and (max-width: 991px) {
+            padding: 20px;
+        }
+
+        @media (min-width: 992px) {
+            padding: 20px 40px;
+        }
+
+        .pd-phone-outer {
+            flex: 1 1 auto;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            align-items: flex-start;
+        }
+
+        .pd-address-outer {
+            flex: 1 0 50%;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: flex-start;
+        }
+
+        a {
+            display: inline-flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: flex-start;
+            text-decoration: none;
+            font-weight: 800;
+            color: white;
+            font-size: 0.8rem;
+
+            img {
+                width: 24px;
+                height: 24px;
+                margin-right: 4px;
+                margin-top: -3px;
+            }
+        }
+    }
+
+    // anchor
+    .pd-badge-outer-link {
+        display: inline-block;
+        position: absolute;
+        z-index: 5;
+
+        @media screen and (max-width: 991px) {
+            top: 120px;
+            right: 5px;
+
+            img {
+                width: 120px;
+                height: 120px;
+            }
+        }
+
+        @media (min-width: 992px) {
+            top: 140px;
+            right: 10px;
+
+            img {
+                width: 160px;
+                height: 160px;
+            }
+        }
+
+        svg {
+            box-shadow: 10px 10px 12px rgba(0,0,0,0.1);
+        }
+    }
+}
