--- a/bootstrap_theme/pendigital/factory_heroesHalf.scss
+++ b/bootstrap_theme/pendigital/factory_heroesHalf.scss
@@ -551,6 +551,279 @@
 
 // end pd-heroesHalf-6
 
+// start pd-heroesHalf-7
+.pd-heroesHalf-7 {
+    // padding-top: $pd-total-nav-height;
+    position: relative;
+
+    .pd-intro-heading-sm {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 10px;
+
+        h1 {
+            font-weight: 400;
+            color: #161B33;
+            font-size: 1rem;
+
+            // letter-spacing: 0.07em;
+            margin-bottom: 0px;
+        }
+
+        span {
+            img {
+                margin-right: 3px;
+                margin-top: -3px;
+            }
+        }
+    }
+
+    .pd-headline {
+        font-weight: 800;
+        color: #161B33;
+        line-height: 1.3;
+
+        @media screen and (max-width: 991px) {
+            font-size: 1.8rem;
+            margin-botom: 20px;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 3rem;
+            margin-bottom: 10px;
+        }
+    }
+
+    .pd-subHeadline {
+        line-height: 1.5;
+        font-weight: 300;
+        color: #161B33;
+
+        strong,
+        em {
+            font-weight: 800;
+        }
+
+        @media screen and (max-width: 991px) {
+            font-size: 0.9rem;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 1rem;
+        }
+    }
+
+    .pd-heroesHalf-7-img-outer {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+
+        .pd-heroesHalf-7-img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            object-position: center center;
+            transition: opacity .3s;
+            opacity: 0;
+            transform: scaleX(-1);
+
+            // remove
+        }
+
+        .pd-heroesHalf-7-img.pd-heroesHalf-7-image-loaded {
+            opacity: 1;
+        }
+    }
+
+    .pd-btn {
+        display: inline-block;
+        text-decoration: none;
+        color: #161B33;
+        margin-right: 20px;
+        padding: 12px 30px;
+        border-radius: 50em;
+        border: 2px solid #DE541E;
+        white-space: nowrap;
+
+        @media screen and (max-width: 991px) {
+            margin-bottom: 16px;
+        }
+
+        img {
+            margin-right: 4px;
+            width: 24px;
+            height: 24px;
+        }
+    }
+
+    // outer content container within col
+    .pd-heroesHalf-7-content-outer {
+        @media screen and (max-width: 991px) {
+            width: 100%;
+        }
+
+        @media (min-width: 992px) {
+            width: 60%;
+            max-width: 750px;
+        }
+
+        .pd-heroesHalf-7-notification-outer {
+            background: #218380;
+            color: white;
+            box-shadow: 10px 10px 12px rgba(0,0,0,0.1);
+            display: flex;
+
+            // border: 1px solid color('background-light-200');
+            p {
+                margin-bottom: 0px;
+            }
+
+            @media screen and (max-width: 991px) {
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-start;
+                padding: 10px 30px;
+            }
+
+            @media (min-width: 992px) {
+                padding: 30px;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                margin-bottom: 10px;
+                border-radius: 10px;
+            }
+
+            .pd-heroesHalf-7-mobile-outer {
+
+                p {
+                    margin-bottom: 0px;
+                    font-weight: 300;
+
+                    strong, em {
+                        font-style: normal;
+                        font-weight: 800;
+                    }
+                }
+
+                a {
+                    color: white;
+                }
+
+            }
+
+            .pd-heroesHalf-7-notification-header-body-outer {
+                display: flex;
+
+                @media screen and (max-width: 992px) {
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                }
+
+                @media (min-width: 992px) {
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                }
+            }
+
+            .pd-heroesHalf-7-notification-header {
+                font-size: 1.4rem;
+                font-weight: 800;
+                flex: 0 1 auto;
+                max-width: 170px;
+            }
+
+            .pd-heroesHalf-7-notification-body {
+                flex: 1 0 60%;
+
+                @media screen and (max-width: 991px) {
+                    border-left: none;
+                }
+
+                @media (min-width: 992px) {
+                    border-left: 2px solid white;
+                }
+
+                p {
+                    font-weight: 300;
+                }
+
+                strong,
+                em {
+                    font-style: normal;
+                    font-weight: 800;
+                }
+
+                a {
+                    color: white;
+                }
+            }
+
+            .pd-heroesHalf-7-notification-footer {
+                flex: 0 0 auto;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+
+                @media screen and (max-width: 991px) {
+                    justify-content: flex-start;
+                }
+
+                @media (min-width: 992px) {
+                    justify-content: flex-end;
+                }
+            }
+
+            .pd-btn {
+                text-decoration: none;
+                color: white;
+                padding: 12px 20px;
+                border-radius: 50em;
+                border: 2px solid white;
+                white-space: nowrap;
+                margin-right: 0px;
+                margin-bottom: 0px;
+
+                img {
+                    margin-right: 4px;
+                    width: 24px;
+                    height: 24px;
+                }
+            }
+        }
+
+        .pd-heroesHalf-7-content-inner {
+            // for the main hero headline
+            background: rgba(242, 247, 242, 0.8);
+            border-top: 1px solid #D8D8D7;
+            border-right: 1px solid #D8D8D7;
+            border-left: 1px solid #D8D8D7;
+            box-shadow: 10px 10px 12px rgba(0,0,0,0.1);
+
+            @media screen and (max-width: 991px) {
+                padding: 30px 30px 30px 30px;
+            }
+
+            @media (min-width: 992px) {
+                padding: 40px 40px 40px 40px;
+            }
+        }
+
+        // potentially not required
+        // .pd-heroesHalf-7-address-phone-card-outer {
+        // }
+    }
+}
+
 
 
 
