--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -1949,27 +1949,309 @@
 
     }
 
+}
+// end pd-section-21
 
+// start pd-section-22
+.pd-section-22 {
+    .pd-intro-heading-sm {
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 10px;
 
+        h2 {
+            font-weight: 400;
+            color: #161B33;
+            font-size: 1rem;
 
+            // letter-spacing: 0.07em;
+            margin-bottom: 0px;
+        }
+
+        span {
+            img {
+                margin-right: 3px;
+                margin-top: -3px;
+            }
+        }
+    }
+
+    .pd-headline {
+        font-weight: 800;
+        color: #161B33;
+        line-height: 1.3;
+
+        @media screen and (max-width: 991px) {
+            font-size: 1.8rem;
+            margin-botom: 20px;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 3rem;
+            margin-bottom: 10px;
+        }
+    }
+
+    .pd-subHeadline {
+        line-height: 1.5;
+        font-weight: 300;
+        color: #161B33;
+        margin-bottom: 10px;
+
+        strong,
+        em {
+            font-weight: 800;
+        }
+
+        @media screen and (max-width: 991px) {
+            font-size: 0.9rem;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 1rem;
+        }
+    }
+
+    .pd-section-22-img-outer {
+        img {
+            width: 100%;
+            height: auto;
+        }
+    }
+
+    .pd-section-22-card-outer {
+        background: rgba(242, 247, 242, 0.7);
+        border: 1px solid #D8D8D7;
+        box-shadow: 6px 6px 10px rgba(0,0,0,0.2);
+
+        @media screen and (max-width: 991px) {
+            padding: 30px;
+        }
+
+        @media (min-width: 992px) {
+            padding: 40px;
+            position: absolute;
+            top: 40%;
+            transform: translateX(-35%) translateY(-40%);
+            width: 135%;
+        }
+
+        header {
+            h3 {
+                font-weight: 800;
+                margin-bottom: 10px;
+                color: #161B33;
+            }
+
+            p {
+                font-weight: 800;
+                color: #161B33;
+            }
+        }
+
+        .pd-card-subHeadline {
+            font-weight: 300;
+            color: #161B33;
+            line-height: 1.5;
+
+            em,
+            strong {
+                font-weight: 800;
+                font-style: normal;
+            }
+        }
+
+        .pd-btn {
+            display: inline-block;
+            text-decoration: none;
+            color: #161B33;
+            margin-right: 20px;
+            padding: 12px 30px;
+            border-radius: 50em;
+            border: 2px solid #DE541E;
+
+            @media screen and (max-width: 991px) {
+                margin-bottom: 16px;
+            }
+
+            img {
+                margin-right: 4px;
+                width: 24px;
+                height: 24px;
+            }
+        }
+
+        .pd-btn.pd-inverted {
+            border: 2px solid white;
+            color: white;
+        }
+    }
+
+    .pd-section-22-list-outer {
+        @media screen and (max-width: 991px) {
+        }
+
+        @media (min-width: 992px) {
+            display: grid;
+            gap: 10px;
+            grid-template-columns: 1fr 1fr;
+        }
+
+        .pd-section-22-grid-item {
+            display: flex;
+            align-items: center;
+
+            @media screen and (max-width: 991px) {
+                margin-bottom: 6px;
+            }
+
+            @media (min-width: 992px) {
+            }
+
+            img {
+                margin-right: 10px;
+                width: 16px;
+                height: 16px;
+            }
+
+            p {
+                margin-bottom: 0px;
+                color: #161B33;
+                font-weight: 300;
+
+                em,
+                strong {
+                    font-weight: 800;
+                    font-style: normal;
+                };
+            }
+        }
+    }
+
+    // a tag
+    .pd-section-22-testimonial-card {
+        display: inline-block;
+        text-decoration: none;
+        color: #161B33;
+        font-weight: 300;
+        line-height: 2;
+        font-size: 1.2rem;
+        text-align: right;
+        border-bottom: 4px solid #161B33;
+        padding-bottom: 20px;
+
+        img {
+            position: absolute;
+            right: 0px;
+        }
+
+        @media screen and (max-width: 991px) {
+            padding-top: 35px;
+
+            img {
+                top: 0px;
+            }
+        }
+
+        @media (min-width: 992px) {
+            padding-top: 0px;
+
+            img {
+                top: -35px;
+            }
+        }
+
+        p {
+            margin-bottom: 0px;
+        }
+
+        footer {
+            p {
+                font-weight: 800;
+                font-size: 0.8rem;
+            }
+        }
+    }
+
+    // table
+    @media screen and (max-width: 575px) {
+        .table td,
+        .table th {
+            min-width: 110px;
+            white-space: nowrap;
+        }
+    }
+
+    .table {
+        tbody {
+            tr {
+                cursor: pointer;
+            }
+        }
+
+        th {
+            font-weight: 800;
+        }
+    }
+
+    .pd-section-22-video-card-outer {
+        position: relative;
+
+        @media screen and (max-width: 575px) {
+            height: 200px;
+        }
+
+        @media (min-width: 576px) and (max-width: 767px) {
+            height: 360px;
+        }
+
+        @media (min-width: 768px) and (max-width: 1199px) {
+            height: 200px;
+        }
+
+        @media (min-width: 1200px) {
+            height: 280px;
+        }
+
+        width: 100%;
+
+        img {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+            object-fit: cover;
+            object-position: center center;
+        }
+
+        .pd-section-22-video-card-overlay {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(rgba(22, 27, 51, 0.6) 0%, rgba(22, 27, 51, 0.3) 30%, rgba(22, 27, 51, 0.3) 70%, rgba(22, 27, 51, 0.6) 100%);
+        }
+
+        .pd-section-22-video-card-play-btn-outer {
+            display: inline-block;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+
+            .pd-icon {
+                width: 80px;
+                height: 80px;
+                fill: white;
+            }
+        }
+
+    }
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+// end pd-section-22
 
 
 
